force-app/main/default/objects/RUL__c/RUL__c.object-meta.xml
<CustomObject>
    <label>RUL</label>
    <nameField>
        <displayFormat>RUL - {0000}</displayFormat>
        <label>RUL Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RUL</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>