force-app/main/default/objects/RUL__c/fields/Record_Saved__c.field-meta.xml
<CustomField>
    <fullName>Record_Saved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Record Saved</label>
    <type>Checkbox</type>
</CustomField>