force-app/main/default/objects/RUL__c/fields/RUL_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>RUL_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RUL_s</relationshipName>
    <type>Lookup</type>
</CustomField>