force-app/main/default/objects/RUL__c/fields/RUL_Assigned_To_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>RUL_Assigned_To_Updated_Date__c</fullName>
    <description>Auto Updated field</description>
    <label>Assigned To Updated Date</label>
    <type>Date</type>
</CustomField>