force-app/main/default/objects/RUL__c/fields/RUL_Assignee_s_Comments__c.field-meta.xml
<CustomField>
    <fullName>RUL_Assignee_s_Comments__c</fullName>
    <label>Assignee&apos;s Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>