force-app/main/default/objects/RUL__c/fields/RUL_Billed_Charges__c.field-meta.xml
<CustomField>
    <fullName>RUL_Billed_Charges__c</fullName>
    <label>Billed Charges</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>