force-app/main/default/objects/RUL__c/fields/RUL_Date_Worked_by_Assigned__c.field-meta.xml
<CustomField>
    <fullName>RUL_Date_Worked_by_Assigned__c</fullName>
    <formula>RUL_Date_Worked_by_Assigned_Flow__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Worked by Assigned</label>
    <type>Date</type>
</CustomField>