force-app/main/default/objects/RUL__c/fields/RUL_Date_Worked_by_Assigned_Flow__c.field-meta.xml
<CustomField>
    <fullName>RUL_Date_Worked_by_Assigned_Flow__c</fullName>
    <label>Date Worked by Assigned Flow</label>
    <type>Date</type>
</CustomField>