force-app/main/default/objects/RUL__c/fields/RUL_DOStext__c.field-meta.xml
<CustomField>
    <fullName>RUL_DOStext__c</fullName>
    <inlineHelpText>Date Of Service</inlineHelpText>
    <label>DOS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>