force-app/main/default/objects/RUL__c/fields/RUL_Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>RUL_Issue_Type__c</fullName>
    <label>Issue Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Medical Records</fullName>
            </value>
            <value>
                <fullName>Authorizations</fullName>
            </value>
            <value>
                <fullName>Dispensing</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Exercise Sheet</fullName>
            </value>
            <value>
                <fullName>LMN/Med Necessity</fullName>
            </value>
            <value>
                <fullName>AOB</fullName>
            </value>
            <value>
                <fullName>Missing Financial Agreement</fullName>
            </value>
            <value>
                <fullName>Coding Query</fullName>
            </value>
            <value>
                <fullName>Coding Query - TeamMD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>