force-app/main/default/objects/RUL__c/fields/RUL_Note_Date__c.field-meta.xml
<CustomField>
    <fullName>RUL_Note_Date__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Note Date</label>
    <type>Date</type>
</CustomField>