force-app/main/default/objects/RUL__c/fields/RUL_Notes__c.field-meta.xml
<CustomField>
    <fullName>RUL_Notes__c</fullName>
    <label>Creator Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>