force-app/main/default/objects/RUL__c/fields/RUL_Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>RUL_Patient_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to Account</description>
    <label>Patient Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RUL&apos;s</relationshipLabel>
    <relationshipName>RUL_s</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>