force-app/main/default/objects/RUL__c/fields/RUL_Status__c.field-meta.xml
<CustomField>
    <fullName>RUL_Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Assignee</fullName>
                <default>true</default>
                <label>Pending Assignee</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Pending Assignor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>