force-app/main/default/objects/RUL__c/fields/RUL_Task_Age__c.field-meta.xml
<CustomField>
    <fullName>RUL_Task_Age__c</fullName>
    <formula>IF(
    ISBLANK(Uploaded_Task_Age__c),
    TODAY() - RUL_Note_Date__c,
    Uploaded_Task_Age__c + (TODAY() - DATEVALUE(CreatedDate)) 
)</formula>
    <label>Task Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>