force-app/main/default/objects/RUL__c/fields/RulCreated_By_Current_User__c.field-meta.xml
<CustomField>
    <fullName>RulCreated_By_Current_User__c</fullName>
    <formula>$User.Id = CreatedBy.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Current User</label>
    <type>Checkbox</type>
</CustomField>