force-app/main/default/objects/RUL__c/fields/Uploaded_Task_Age__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_Task_Age__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Uploaded Task Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>