force-app/main/default/objects/RUL__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RUL_Patient_Name__c</columns>
    <columns>RUL_Status__c</columns>
    <columns>RUL_Assigned_To__c</columns>
    <columns>RUL_Issue_Type__c</columns>
    <columns>RUL_Billed_Charges__c</columns>
    <columns>RUL_Task_Age__c</columns>
    <columns>RUL_Notes__c</columns>
    <columns>RUL_Assignee_s_Comments__c</columns>
    <columns>RUL_Date_Worked_by_Assigned__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RUL_Assigned_To__c</field>
        <operation>equals</operation>
        <value>test AllianceStaff</value>
    </filters>
    <label>All</label>
</ListView>