force-app/main/default/objects/RUL__c/listViews/My_RUL.listView-meta.xml
<ListView>
    <fullName>My_RUL</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>RUL_Patient_Name__c</columns>
    <columns>RUL_DOStext__c</columns>
    <columns>RUL_Assigned_To__c</columns>
    <columns>RUL_Issue_Type__c</columns>
    <columns>RUL_Billed_Charges__c</columns>
    <columns>RUL_Task_Age__c</columns>
    <columns>RUL_Notes__c</columns>
    <columns>RUL_Assignee_s_Comments__c</columns>
    <columns>RUL_Date_Worked_by_Assigned__c</columns>
    <columns>RUL_Status__c</columns>
    <columns>RUL_Note_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>My RUL</label>
</ListView>