force-app/main/default/objects/RUL__c/listViews/Rul_LV1.listView-meta.xml
<ListView>
    <fullName>Rul_LV1</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Rul</label>
</ListView>